<resources>
    <string name="app_name">Bank App</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="first_numbers">Enter the first digits of a card number</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="load_data">Load Data</string>
    <string name="error_input_bin">Empty Input</string>
    <string name="currency">Currency: %s</string>
    <string name="county_coordinates">(latitude: %1$s, longitude: %2$s)</string>
</resources>